--- a/pom.xml
+++ b/pom.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <groupId>seancorfield</groupId>
+  <groupId>com.github.seancorfield</groupId>
   <artifactId>depstar</artifactId>
-  <version>2.0.188</version>
+  <version>2.0.193</version>
   <name>depstar</name>
   <description>a clj-based uberjarrer</description>
   <url>https://github.com/seancorfield/depstar</url>
@@ -25,7 +25,7 @@
     <url>https://github.com/seancorfield/depstar</url>
     <connection>scm:git:git://github.com/seancorfield/depstar.git</connection>
     <developerConnection>scm:git:ssh://git@github.com/seancorfield/depstar.git</developerConnection>
-    <tag>v2.0.188</tag>
+    <tag>v2.0.193</tag>
   </scm>
   <dependencies>
     <dependency>
