--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -17,6 +17,6 @@ jobs:
       - name: Setup Clojure
         uses: DeLaGuardo/setup-clojure@master
         with:
-          tools-deps: '1.10.3.814'
+          tools-deps: '1.10.3.822'
       - name: Run Tests
-        run: clojure -M:test:runner
+        run: clojure -X:test:runner
