Clean up .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,23 @@
-*~
-.java-version
 .classpath
-.clj-kondo
+.clj-kondo/.cache
 .cpcache
-.lsp
+.eastwood
+.factorypath
+.java-version
+.lsp/sqlite.db
+.nrepl-port
 .project
 .rebel_readline_history
 .settings
 .socket-repl-port
+.sw*
+*.class
 *.jar
+*.swp
+*~
 /classes
+/classes
+/clojure_test_*
+/cljs-test-runner-out
+/derby.log
 /target
